<resources>
    <string name="app_name">Kotlin_Welcome2</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="or_sign">Or sign in with email</string>
    <string name="login">Login</string>
    <string name="sign">Sign Up</string>
    <string name="title_activity_home">HomeActivity</string>


    <string name="facebook_app_id">909714869224945</string>
    <string name="fb_login_protocol_scheme">fb909714869224945</string>
    <string name="title_activity_face2">Face2Activity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="cancel_login">Cancel login</string>
    <string name="error_login">Login error</string>
    <string name="app_facebook_again">Go to HomePage </string>
    <string name="title_activity_face">FaceActivity</string>


</resources>
